apps/base/auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: lzetam/auth-service:latest
          ports:
            - containerPort: 8501  # Streamlit port
              protocol: TCP
              name: streamlit
          
        - name: auth-api
          image: lzetam/auth-service:latest
          command: ["python", "-m", "uvicorn", "auth.api:app", "--host", "0.0.0.0", "--port", "8000"]
          ports:
            - containerPort: 8000
              name: api
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 20
            periodSeconds: 5
      restartPolicy: Always
